# pandoc-gui-mk2

./: .mermaid-config.json  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
scripts/: bump-version.sh  prepare-commit-msg
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
